--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flask requests pytest
+        pip install flask flask-sqlalchemy sqlalchemy requests pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
     - name: Lint with flake8
@@ -49,19 +49,37 @@ jobs:
     
     - name: Start Flask server
       run: |
-        nohup python app.py > flask.log 2>&1 &
-        sleep 5
+        python app.py > flask.log 2>&1 &
+        sleep 7
+        # Verify server started
+        if ! lsof -i :5000; then
+          echo "Flask server failed to start"
+          cat flask.log
+          exit 1
+        fi
       env:
         FLASK_ENV: testing
+      timeout-minutes: 1
     
     - name: Run API tests
       run: |
-        python Test.py
+        python Project_testing_files/Test.py
       continue-on-error: false
+      timeout-minutes: 5
     
     - name: Check Flask server health
       run: |
-        curl -f http://localhost:5000/ || exit 1
+        for i in {1..5}; do
+          if curl -f http://localhost:5000/ 2>/dev/null; then
+            echo "✓ Server is healthy"
+            exit 0
+          fi
+          echo "Attempt $i: Waiting for server..."
+          sleep 2
+        done
+        echo "✗ Server failed health check"
+        cat flask.log
+        exit 1
     
     - name: Upload Flask logs on failure
       uses: actions/upload-artifact@v4
@@ -69,6 +87,7 @@ jobs:
       with:
         name: flask-logs-${{ matrix.python-version }}
         path: flask.log
+        retention-days: 5
 
   code-quality:
     name: Code Quality Check
@@ -85,22 +104,23 @@ jobs:
     
     - name: Install code quality tools
       run: |
-        pip install black isort pylint
+        pip install black isort pylint flake8
     
     - name: Check code formatting with Black
       run: |
-        black --check app.py Test.py
-      continue-on-error: true
+        black --check app.py Project_testing_files/Test.py || true
     
     - name: Check import sorting
       run: |
-        isort --check-only app.py Test.py
-      continue-on-error: true
+        isort --check-only app.py Project_testing_files/Test.py || true
     
     - name: Run pylint
       run: |
-        pylint app.py --disable=C0114,C0116,R0903 --max-line-length=127
-      continue-on-error: true
+        pylint app.py --disable=C0114,C0116,R0903,W0611 --max-line-length=127 || true
+    
+    - name: Run flake8
+      run: |
+        flake8 app.py Project_testing_files/Test.py --max-line-length=127 --ignore=E501,W503 || true
 
   security:
     name: Security Scan
@@ -121,21 +141,26 @@ jobs:
     
     - name: Run Bandit security scan
       run: |
-        bandit -r app.py -f json -o bandit-report.json
-      continue-on-error: true
+        bandit -r app.py -f json -o bandit-report.json || true
+        bandit -r app.py -f txt || true
+    
+    - name: Install dependencies for safety check
+      run: |
+        pip install flask flask-sqlalchemy sqlalchemy requests
     
     - name: Check dependencies for vulnerabilities
       run: |
-        pip install flask requests
-        safety check --json
-      continue-on-error: true
+        safety check --json --output report || true
     
-    - name: Upload security report
+    - name: Upload security reports
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: security-report
-        path: bandit-report.json
+        name: security-reports
+        path: |
+          bandit-report.json
+          report
+        retention-days: 7
 
   docker:
     name: Docker Build Test
@@ -150,15 +175,39 @@ jobs:
     
     - name: Build Docker image
       run: |
-        docker build -t tms:test .
-      if: hashFiles('Dockerfile') != ''
+        if [ -f Dockerfile ]; then
+          docker build -t tms:test . || exit 1
+        else
+          echo "Dockerfile not found, skipping Docker build"
+        fi
       continue-on-error: true
     
     - name: Test Docker container
       run: |
+        if ! docker images | grep -q tms:test; then
+          echo "Docker image not built, skipping container test"
+          exit 0
+        fi
+        
         docker run -d -p 5000:5000 --name tms-test tms:test
         sleep 5
-        curl -f http://localhost:5000/ || exit 1
+        
+        # Check if container is running
+        if ! docker ps | grep -q tms-test; then
+          echo "✗ Container failed to start"
+          docker logs tms-test
+          exit 1
+        fi
+        
+        # Health check
+        if curl -f http://localhost:5000/ 2>/dev/null; then
+          echo "✓ Container is healthy"
+        else
+          echo "✗ Container health check failed"
+          docker logs tms-test
+          exit 1
+        fi
+        
         docker stop tms-test
-      if: hashFiles('Dockerfile') != ''
+        docker rm tms-test
       continue-on-error: true
