--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==3.0.0
-requests==2.31.0
-Werkzeug==3.0.1
-SQLAlchemy==2.0.45
+Flask>=3.0.0
+requests>=2.31.0
+Werkzeug>=3.0.1
+SQLAlchemy>=2.0.45
+flask_sqlalchemy>=3.1.1
